# GitHub

./: .gitattributes  2025_09_08_Info_Von-Neumann_Rechner.py  CopyOfDisplay.java  CopyOfMamaMiaPizzaria.java  MyObject.java  README  Test8.csv  chemie.py  first_book.csv  matrix.csv  matrix1.csv  matrix2.csv  merged_booking_data.csv  read_me.txt  requirements.txt  result.csv  result1.csv  results_anim.csv  test.py  test5.csv
Java/: alphatest.java  test.java
Java/Blackjack/: Card.java  blackjack.java
Java/ChatGPT/: Display.java  LoginFrame.java
Java/HerrLinden/: GraphBuilder.java  baseConverter.java  fallschirmspringer.java  graphbuilder.py  integralcalc.java  programm.java  programmcopy.java  test.java  test.txt
Java/Konto/: Object.java  User.java  user.py
Java/MamaMiaPizzaria/: LoginFrame.java  MamaMiaPizzaria.java  MyObject.java  alphatest.java
Java/Pizza_Project/: Display.java  LoginFrame.java  MamaMiaPizzaria.java  MyObject.java  Pizza.java  RegisterFrame.java  StartFrame.java  User.java  alphatest.java
Java/Scratch Project/: HelloWorldJFrame.java
Java/Sudoku/: Sudoku.java  Sudoku_4x4.java  main_4x4.java  reading_csv.java  sudoku_solver.java  test.java
Java/Unterricht/: Display.java  Sudoku.java  TikTokTrend2.java  arrays.java  eva.java  magische_zahlen.java  minecraft.java  threading.java
MamaMiaPizzaria/: CopyOfDisplay.java  CopyOfMamaMiaPizzaria.java  Display.java  LoginFrame.java  MamaMiaPizzaria.java  MyObject.java  Pizza.java  RegisterFrame.java  StartFrame.java  User.java  alphatest.java
MamaMiaPizzaria/BlueJ - old/: Bild_erstellen.java  DAS_GROESSTE_PROBLEM_EU_WEST.java  Level0.java  (+1 more)
Python/: queue_voting.py  ralph_schuhmacher.py  rechenproblem.py  scratch.py  sudoku_generator.py
kleinetests/: Sportfest 2025.xlsx  name_counts.json  sportfest.py
python/: .gitignore  pyproject.toml
python/src/python/: __init__.py
python/src/python/Pygame/: scratch.py
python/src/python/Pygame/The_adventure_of_Zorugark/: functions.py  main.py  variables.py
python/src/python/Pygame/The_adventure_of_Zorugark/classes/: test.py
python/src/python/Pygame/The_adventure_of_Zorugark/source/: The Adventure of Zorugark.tiled-session  roguelikeChar_transparent.tsx
python/src/python/Pygame/Tutorials/: zGame_test10_collision_character.py  zGame_test8_collision.py  zGame_test9_masks.py
python/src/python/PythonGui/: Serverdaten.txt  daten herunterladen.py  gui_main.py  label_errors.py  main.py  main_neu copy.py  main_neu_jupyter.ipynb  pyODBCTest.py  sqlAlchemytest.py  test.py  test2.py  test7.py  test8.py  test9.py
python/src/python/VSC/: Fallschirmspringer.py  main.py
python/src/python/anim/: main.py
python/src/python/calculator/counter/: main.py
python/src/python/customtkinter/: test.py
python/src/python/gui/: main.py  test.py
python/src/python/gui/examples/: scrollable_frame_example.py
python/src/python/rest/: rechenproblem.py  test.py
rye-project/: pyproject.toml  results.csv  results_anim.csv
rye-project/src/rye_project/: main.py
rye-project/src/rye_project/gui/: example.py  main.py
xml_to_csv/: main.py
(+77 files in other folders)
