[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BrennenderMartin", email = "mattis2612@outlook.de" }
]
dependencies = [
    "pygame>=2.6.1",
    "pandas>=2.2.3",
    "customtkinter>=5.2.2",
    "pillow>=11.2.1",
    "playsound>=1.3.0",
    "python-vlc>=3.0.21203",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python3 -m python.main"
anim = "python3 -m python.anim.main"
guiex = "python3 -m python.gui.example"
gui = "python3 -m python.gui.main"
test = "python3 -m python.gui.test"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

