[project]
name = "rye-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BrennenderMartin", email = "mattis2612@outlook.de" }
]
dependencies = [
    "pygame>=2.6.1",
    "pandas>=2.2.3",
    "customtkinter>=5.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python3 -m rye_project.main"
anim = "python3 -m rye_project.anim.main"
guiex = "python3 -m rye_project.gui.example"
gui = "python3 -m rye_project.gui.main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_project"]

